--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,7 @@ jobs:
       run: npm run coverage-ci
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
+      if: ${{ false }} # MATTR disable upload step
       with:
         file: ./coverage/lcov.info
         fail_ci_if_error: true
