--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "linked data",
     "compression"
   ],
-  "main": "index.js",
+  "main": "dist/main.js",
   "module": "main.js",
   "browser": {
     "index.js": "main.js",
@@ -32,6 +32,7 @@
     "node": ">=12"
   },
   "scripts": {
+    "build": "rm -rf dist/ && tsc --pretty",
     "test": "npm run test-node",
     "test-node": "cross-env NODE_ENV=test mocha -r esm --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
     "test-karma": "karma start karma.conf.js",
@@ -42,8 +43,8 @@
     "lint": "eslint ."
   },
   "files": [
-    "index.js",
     "lib",
+    "dist",
     "main.js"
   ],
   "dependencies": {
@@ -71,6 +72,7 @@
     "mocha": "^8.3.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.0.0",
+    "typescript": "4.3.2",
     "webpack": "^4.46.0"
   },
   "nyc": {
