--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "linked data",
     "compression"
   ],
-  "main": "index.js",
+  "main": "dist/main.js",
   "module": "main.js",
   "browser": {
     "index.js": "main.js",
@@ -32,6 +32,7 @@
     "node": ">=12"
   },
   "scripts": {
+    "build": "rm -rf dist/ && rollup main.js --file dist/main.js --format cjs --sourcemap",
     "test": "npm run test-node",
     "test-node": "cross-env NODE_ENV=test mocha -r esm --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
     "test-karma": "karma start karma.conf.js",
@@ -39,12 +40,14 @@
     "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text-summary npm run test-node",
     "coverage-ci": "cross-env NODE_ENV=test nyc --reporter=lcovonly npm run test-node",
     "coverage-report": "nyc report",
-    "lint": "eslint ."
+    "lint": "eslint ./lib ./tests"
   },
   "files": [
-    "index.js",
     "lib",
-    "main.js"
+    "main.js",
+    "dist/main.js",
+    "dist/main.js.map",
+    "index.d.ts"
   ],
   "dependencies": {
     "base58-universal": "^1.0.0",
@@ -71,6 +74,7 @@
     "mocha": "^8.3.0",
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.0.0",
+    "rollup": "2.56.3",
     "webpack": "^4.46.0"
   },
   "nyc": {
