--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "benchmark": "^2.1.4",
     "chai": "^4.3.0",
     "chai-bytes": "^0.1.2",
+    "chai-as-promised": "7.1.1",
     "cross-env": "^6.0.3",
     "eslint": "^7.20.0",
     "eslint-config-digitalbazaar": "^2.5.0",
