--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint": "^7.20.0",
     "eslint-config-digitalbazaar": "^2.5.0",
     "eslint-plugin-jsdoc": "^30.7.13",
+    "jsonld": "5.2.0",
     "karma": "^5.0.9",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.0",
