--- a/package.json
+++ b/package.json
@@ -24,16 +24,23 @@
   ],
   "type": "module",
   "exports": "./lib/index.js",
+  "main": "dist/main.js",
   "browser": {
+    "index.js": "main.js",
     "./lib/util.js": "./lib/util-browser.js"
   },
   "files": [
-    "lib/**/*.js"
+    "lib/**/*.js",
+    "main.js",
+    "dist/main.js",
+    "dist/main.js.map",
+    "index.d.ts"
   ],
   "engines": {
     "node": ">=14"
   },
-"scripts": {
+  "scripts": {
+    "build": "rm -rf dist/ && rollup main.js --file dist/main.js --format cjs --sourcemap",
     "test": "npm run test-node",
     "test-node": "cross-env NODE_ENV=test mocha --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
     "test-karma": "karma start karma.conf.cjs",
@@ -41,7 +48,7 @@
     "coverage": "cross-env NODE_ENV=test c8 npm run test-node",
     "coverage-ci": "cross-env NODE_ENV=test c8 --reporter=lcovonly --reporter=text-summary --reporter=text npm run test-node",
     "coverage-report": "c8 report",
-    "lint": "eslint ."
+    "lint": "eslint ./lib ./tests"
   },
   "dependencies": {
     "base58-universal": "^2.0.0",
@@ -67,6 +74,8 @@
     "karma-webpack": "^5.0.0",
     "mocha": "^10.0.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^15.0.0",
+    "rollup": "2.56.3",
     "webpack": "^5.73.0"
   },
   "c8": {
