--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
   ],
   "type": "module",
   "exports": "./lib/index.js",
+  "main": "dist/main.js",
+  "module": "main.js",
   "browser": {
+    "index.js": "main.js",
     "./lib/util.js": "./lib/util-browser.js"
   },
   "engines": {
@@ -73,7 +76,6 @@
     "karma-webpack": "^5.0.0",
     "mocha": "^10.0.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^15.1.0",
     "rollup": "2.75.6",
     "webpack": "^5.73.0"
   },
