--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "node": ">=14"
   },
   "scripts": {
-    "build": "rm -rf dist/ && rollup main.js --file dist/main.js --format cjs --sourcemap",
+    "build": "rm -rf dist/ && rollup main.js --file dist/main.js --format esm --sourcemap",
     "test": "npm run test-node",
     "test-node": "cross-env NODE_ENV=test mocha --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
     "test-karma": "karma start karma.conf.cjs",
