--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
+    "@types/node": "^17.0.42",
     "c8": "^7.11.3",
     "chai": "^4.3.6",
     "chai-as-promised": "7.1.1",
