change exports structure to try export the main js file as a part of the module. Removed references for module

--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
     "compression"
   ],
   "type": "module",
-  "exports": "./lib/index.js",
-  "main": "dist/main.js",
-  "module": "main.js",
+  "exports": "./dist/main.js",
   "browser": {
     "index.js": "main.js",
     "./lib/util.js": "./lib/util-browser.js"
