Added resolutions for ansi-regex depedencies which were still reporting highs. Confirmed no impact to solution

--- a/package.json
+++ b/package.json
@@ -82,7 +82,10 @@
     "webpack": "^5.73.0"
   },
   "resolutions": {
-    "karma-mocha/minimist": "1.2.6"
+    "karma-mocha/minimist": "1.2.6",
+    "karma/http-proxy/follow-redirects": "1.14.8",
+    "c8/**/ansi-regex": "5.0.1",
+    "karma-mocha-reporter/strip-ansi/ansi-regex": "3.0.1"
   },
   "c8": {
     "reporter": [
