--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "linked data",
     "compression"
   ],
-  "type": "module",
   "main": "dist/main.js",
   "module": "main.js",
   "browser": {
@@ -35,9 +34,9 @@
   "scripts": {
     "build": "rm -rf dist/ && rollup --config rollup.config.js",
     "test": "npm run test-node",
-    "test-node": "cross-env NODE_ENV=test mocha --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
+    "test-node": "cross-env NODE_ENV=test mocha --require @babel/register --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
     "test-karma": "karma start karma.conf.cjs",
-    "test-watch": "cross-env NODE_ENV=test mocha --watch --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
+    "test-watch": "cross-env NODE_ENV=test mocha --require @babel/register --watch --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
     "coverage": "cross-env NODE_ENV=test c8 npm run test-node",
     "coverage-ci": "cross-env NODE_ENV=test c8 --reporter=lcovonly --reporter=text-summary --reporter=text npm run test-node",
     "coverage-report": "c8 report",
@@ -57,6 +56,8 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "7.18.6",
+    "@babel/register": "7.18.6",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/node": "^17.0.42",
     "c8": "^7.11.3",
