--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "test": "npm run test-node",
     "test-node": "cross-env NODE_ENV=test mocha --require @babel/register --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
     "test-karma": "karma start karma.conf.cjs",
-    "test-watch": "cross-env NODE_ENV=test mocha --watch --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
+    "test-watch": "cross-env NODE_ENV=test mocha --watch --require @babel/register --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
     "coverage": "cross-env NODE_ENV=test c8 npm run test-node",
     "coverage-ci": "cross-env NODE_ENV=test c8 --reporter=lcovonly --reporter=text-summary --reporter=text npm run test-node",
     "coverage-report": "c8 report",
@@ -80,6 +80,7 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.1.0",
     "rollup": "2.75.6",
+    "util": "0.12.4",
     "webpack": "^5.73.0"
   },
   "c8": {
